--- a/src/components/IDIcon/IDIcon.css
+++ b/src/components/IDIcon/IDIcon.css
@@ -1,10 +1,13 @@
 .IdIcon {
   display: flex;
   flex-direction: row;
-  margin-left: 5px;
+  margin-left: 15px;
 }
 
 .UserIcon {
-  margin-right: 5px;
-  margin-top: 17px;
+  background-color: rgb(222, 222, 223);
+  border-radius: 100%;
+  margin-right: 20px;
+  margin-top: 10px;
+  padding: 7px;
 }
