--- a/src/components/IdUser/IdUser.css
+++ b/src/components/IdUser/IdUser.css
@@ -1,3 +1,8 @@
+.titleID {
+  margin-left: 3%;
+  margin-top: 30px;
+}
+
 .pageUserId{
   margin-left: 15%;
   padding-top: 6%;
@@ -6,7 +11,8 @@
 
 .boxUserId {
   background-color: white;
-  border: solid 1px rgb(90, 89, 89);
+  border: solid 1px rgb(224, 222, 222);
+  border-radius: 1%;
   height: 650px;
   width: 900px;
 }
@@ -72,11 +78,12 @@
 
 .nextButton {
   background-color: #5357B1;
+  border-radius: 3%;
   color: white;
   padding-bottom: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
   padding-top: 10px;
-  margin-left: 83%;
+  margin-left: 80%;
   margin-top: 115px;
 }
