--- a/src/components/AboutUser/AboutUser.css
+++ b/src/components/AboutUser/AboutUser.css
@@ -65,27 +65,67 @@
 /* Para telas pequena / laptops */
 @media only screen and (max-width: 1024px)
 {
+  .pageUserAbout {
+    margin-left: 6%;
+    padding-top: 10%;
+  }
+}
+
+/* Para telas pequena / laptops */
+@media only screen and (max-width: 912px)
+{
+  .pageUserAbout {
+    margin-left: 11%;
+    padding-top: 30%;
+  }
+
+  .boxUserAbout {
+    background-color: white;
+    border: solid 1px rgb(224, 222, 222);
+    border-radius: 1%;
+    height: 720px;
+    width: 700px;
+  }
   
+  .previousButtonAbout {
+    margin-left: 50%;
+    margin-top: 80px;
+  }
 }
 
 /* Para Tablet */
 @media only screen and (max-width: 768px)
 {
+  .pageUserAbout {
+    padding-top: 20%;
+  }
+
+  .boxUserAbout {
+    height: 720px;
+    width: 600px;
+  }
   
+  .previousButtonAbout {
+    margin-left: 40%;
+    margin-top: 80px;
+  }
 }
 
 /* Para mobile */
 @media only screen and (max-width: 600px)
 {
+  .pageUserAbout {
+    padding-top: 5%;
+  }
+
+  .boxUserAbout {
+    height: 700px;
+    margin-left: 5%;
+    width: 400px;
+  }
   
+  .previousButtonAbout {
+    margin-left: 12%;
+    margin-top: 80px;
+  }
 }
-
-@media only screen and (max-width: 420px)
-  {
-  
-  }
-
-  @media only screen and (max-width: 300px)
-  {
-
-  }
