--- a/src/components/NavigateBar/NavigateBar.css
+++ b/src/components/NavigateBar/NavigateBar.css
@@ -6,3 +6,13 @@
   margin-right: 20%;
   margin-top: 50px;
 }
+
+/* Para mobile */
+@media only screen and (max-width: 600px)
+{
+  .navibar {
+    font-size: 10px;
+    margin-right: 10%;
+    width: 370px;
+  }
+}
