--- a/src/pages/UserAbout/UserAbout.css
+++ b/src/pages/UserAbout/UserAbout.css
@@ -2,3 +2,27 @@
   background-color: rgb(240, 243, 243);
   height: 890px;
 }
+
+/* Para telas pequena / laptops */
+@media only screen and (max-width: 912px)
+{
+  .pageAbout {
+    height: 1370px;
+  }
+}
+
+/* Para Tablet */
+@media only screen and (max-width: 768px)
+{
+  .pageAbout {
+    height: 1025px;
+  }
+}
+
+/* Para mobile */
+@media only screen and (max-width: 600px)
+{
+  .pageAbout {
+    height: 800px;
+  }
+}
